<resources>
    <string name="app_name">Wish2Eat</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_create_account">New user? Create Account!</string>
    <string name="invalid_login">Invalid e-mail/password</string>
    <string name="create_your_account">Create your Account</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="user_already_exist">This User Already Exist</string>
    <string name="user_created">User created successfully</string>
    <string name="user_fields_invalid">Some field is invalid to create your account</string>
    <string name="my_account">My account</string>
    <string name="my_favorite_list">My Favorite List</string>
    <string name="log_out">Log out</string>
    <string name="edit_account">Edit Account</string>
    <string name="account_not_exist">This Account doesn\'t exist</string>
    <string name="add_new_store">Add new Store</string>
    <string name="loading">Loading…</string>
    <string name="not_empty_field">Neither camp must be empty!</string>
    <string name="empty_list">Your list is empty</string>
    <string name="add_product">Add product</string>
    <string name="search">Search</string>
    <string name="stores">Stores</string>
    <string name="products">Products</string>
    <string name="monetary_symbol">R$</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="not_empty">All Fields must not be empty</string>
    <string name="updated_account">Your account was updated</string>
</resources>