<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_primary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/straight_5"
        android:layout_marginEnd="@dimen/straight_5"
        app:cardBackgroundColor="@color/white"
        android:elevation="@dimen/straight_8"
        app:cardElevation="@dimen/straight_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/straight_7"
                android:text="@string/create_your_account"
                android:textAlignment="center"
                android:textSize="@dimen/straight_string_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameInputCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/straight_7"
                android:layout_marginStart="@dimen/straight_6"
                android:layout_marginEnd="@dimen/straight_6"
                android:hint="@string/name"
                android:textSize="@dimen/straight_string_2"
                app:layout_constraintTop_toBottomOf="@id/labelCreateAccount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailInputCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/straight_7"
                android:layout_marginStart="@dimen/straight_6"
                android:layout_marginEnd="@dimen/straight_6"
                android:hint="@string/e_mail"
                android:textSize="@dimen/straight_string_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputCard" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordInputCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/straight_7"
                android:layout_marginStart="@dimen/straight_6"
                android:layout_marginEnd="@dimen/straight_6"
                android:layout_marginBottom="@dimen/straight_7"
                android:hint="@string/password"
                android:textSize="@dimen/straight_string_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInputCard"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCreateAccountCard"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create"
                android:textSize="@dimen/straight_string_2"
                android:layout_marginTop="@dimen/straight_8"
                android:layout_marginBottom="@dimen/straight_7"
                app:layout_constraintTop_toBottomOf="@id/passwordInputCard"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>